CSS spacing fixes

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -139,9 +139,7 @@ pre {
     white-space: pre;
 }
 
-main > div {
-    margin: 40px 16px;
-}
+
 
 input,
 textarea,
